Modellati utenti analisi come oggetti
